# f5-agent-auditor

./: .gitignore  README.md  README.rst  setup.cfg  setup.py  tox.ini
examples/: 10.145.64.180_20231207-085906  10.145.64.234_20231207-085905
f5_agent_auditor/: auditor.py  bigip.py  constants.py  db.py  filters.py  options.py  rebuilder.py  resource_helper.py  tracer.py  utils.py
f5_agent_auditor/collector/: base.py  bigip_collector.py  factory.py  lbaas_collector.py
f5_agent_auditor/comparator/: __init__.py  lbaas_bigip_comparator.py
f5_agent_auditor/db/: models.py  queries.py
f5_agent_auditor/manager/: device.py  lbaas.py
f5_agent_auditor/publishers/: csv_publisher.py  json_publisher.py
f5_agent_auditor/templates/: rebuild_all.tmpl
