[metadata]
name = f5-agent-auditor
version = attr: f5_agent_auditor.__version__
author = Peter Zhang
author_email = peter.zhang@f5.com
description = A small check tool for F5 LBaas Agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhang-shengping/f5-agent-auditor
project_urls =
    Bug Tracker = https://github.com/zhang-shengping/f5-agent-auditor/issues
classifiers =
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7

[options.entry_points]
console_scripts =
    f5-agent-auditor = f5_agent_auditor.auditor:main
