[metadata]
name = f5-agent-auditor
author = Peter Zhang
author_email = peter.zhang@f5.com
description = A little rough tool for F5 LBaas Agent
long_description = file: README.rst
long_description_content_type = text/rst
url = https://gitee.com/F5Networks/f5-agent-aduitor/tree/9.9-stable/
project_urls =
    Bug Tracker = https://gitee.com/F5Networks/f5-agent-aduitor/issues
classifiers =
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7

[options.entry_points]
console_scripts =
    f5-agent-auditor = f5_agent_auditor.auditor:main
